added projects page hopefully

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
-      - new_page.qmd
+      - projects.qmd
 
 format:
   html:
