Added image classifier

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,11 +5,20 @@ project:
 website:
   title: "Tyler Moseley"
   navbar:
-    right:
+    left:
       - href: index.qmd
         text: Home
       - about.qmd
       - projects.qmd
+    tools:
+    - icon: twitter
+      href: https://twitter.com
+    - icon: github
+      menu:
+        - text: Source Code
+          url:  https://code.com
+        - text: Report a Bug
+          url:  https://bugs.com
 
 format:
   html:
